--- a/template.html
+++ b/template.html
@@ -5,8 +5,8 @@
           ><strong
             ><img
               src="https://upload.wikimedia.org/wikipedia/commons/thumb/7/77/Emblem_of_Uzbekistan.svg/1200px-Emblem_of_Uzbekistan.svg.png"
-              alt=""
-              style="width: 100px; height: 100px;"
+              alt="gerb"
+              style="width: 80px; height: 80px;"
               /></strong
         ></span>
       </p>
@@ -40,7 +40,7 @@
       class="p1"
       style="
         text-align: center;
-        font-size: 10px;
+        font-size: 10pt;
         margin-top: 0px;
         margin-bottom: 0px;
         line-height: 1;
@@ -59,7 +59,7 @@
       class="p1"
       style="
         text-align: center;
-        font-size: 10px;
+        font-size: 10pt;
         margin-top: 0px;
         margin-bottom: 0px;
         line-height: 1;
@@ -86,7 +86,7 @@
       "
     >
       <span style="margin-top: 20px;"
-        ><span style="font-size: 18pt"
+        ><span style="font-size: 10pt"
           ><strong
             >
             <hr style="width: 80%; margin: 20px auto;">
